--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,9 @@ language: ruby
 install:
   - gem uninstall bundler
   - gem install bundler --version '1.8.0'
+  - bundle install
+  
+script: "bundle exec rspec"
 rvm:
   - 2.2.0
 
